build/parser.output
Terminals unused in grammar

   TOKEN_ERRO


Grammar

    0 $accept: p $end

    1 p: programa

    2 programa: dec_global programa
    3         | dec_funcao programa
    4         | /* empty */

    5 tipo_variavel: TK_PR_INT
    6              | TK_PR_FLOAT
    7              | TK_PR_BOOL
    8              | TK_PR_CHAR
    9              | TK_PR_STRING

   10 dec_global: dec_variavel ';'
   11           | dec_vetor ';'

   12 dec_variavel: tipo_variavel ':' TK_IDENTIFICADOR

   13 dec_vetor: tipo_variavel ':' TK_IDENTIFICADOR '[' TK_LIT_INT ']'

   14 dec_funcao: cabecalho dec_local corpo

   15 cabecalho: tipo_variavel ':' TK_IDENTIFICADOR '(' lista_param ')'

   16 lista_param: lista_param_nao_vazia
   17            | /* empty */

   18 lista_param_nao_vazia: parametro ',' lista_param_nao_vazia
   19                      | parametro

   20 parametro: tipo_variavel ':' TK_IDENTIFICADOR

   21 dec_local: dec_variavel ';' dec_local
   22          | /* empty */

   23 corpo: '{' lista_comando '}'

   24 bloco_comando: '{' lista_comando '}'

   25 lista_comando: comando
   26              | comando ';' lista_comando
   27              | ';' lista_comando
   28              | /* empty */

   29 comando: bloco_comando
   30        | dec_variavel
   31        | dec_vetor
   32        | controle_fluxo
   33        | atribuicao
   34        | input
   35        | output
   36        | return
   37        | chamada

   38 atribuicao: TK_IDENTIFICADOR '=' expressao
   39           | vet_index '=' expressao

   40 vet_index: TK_IDENTIFICADOR '[' expressao ']'

   41 input: TK_PR_INPUT TK_IDENTIFICADOR

   42 output: TK_PR_OUTPUT lista_expressoes_nao_vazia

   43 lista_expressoes_nao_vazia: expressao ',' lista_expressoes_nao_vazia
   44                           | expressao

   45 return: TK_PR_RETURN expressao

   46 controle_fluxo: TK_PR_IF '(' expressao ')' TK_PR_THEN comando
   47               | TK_PR_IF '(' expressao ')' TK_PR_THEN ';'
   48               | TK_PR_IF '(' expressao ')' TK_PR_THEN comando TK_PR_ELSE comando
   49               | TK_PR_IF '(' expressao ')' TK_PR_THEN ';' TK_PR_ELSE comando
   50               | TK_PR_IF '(' expressao ')' TK_PR_THEN comando TK_PR_ELSE ';'
   51               | TK_PR_IF '(' expressao ')' TK_PR_THEN ';' TK_PR_ELSE ';'
   52               | TK_PR_WHILE '(' expressao ')' TK_PR_DO bloco_comando
   53               | TK_PR_WHILE '(' expressao ')' TK_PR_DO ';'
   54               | TK_PR_DO bloco_comando TK_PR_WHILE '(' expressao ')'
   55               | TK_PR_DO ';' TK_PR_WHILE '(' expressao ')'

   56 expressao: TK_IDENTIFICADOR
   57          | TK_IDENTIFICADOR '[' expressao ']'
   58          | TK_LIT_INT
   59          | TK_LIT_FLOAT
   60          | TK_LIT_FALSE
   61          | TK_LIT_TRUE
   62          | TK_LIT_CHAR
   63          | TK_LIT_STRING
   64          | expressao '+' expressao
   65          | expressao '-' expressao
   66          | '-' expressao
   67          | '!' expressao
   68          | expressao '*' expressao
   69          | expressao '/' expressao
   70          | expressao '<' expressao
   71          | expressao '>' expressao
   72          | '(' expressao ')'
   73          | expressao TK_OC_LE expressao
   74          | expressao TK_OC_GE expressao
   75          | expressao TK_OC_EQ expressao
   76          | expressao TK_OC_NE expressao
   77          | expressao TK_OC_AND expressao
   78          | expressao TK_OC_OR expressao
   79          | chamada

   80 chamada: TK_IDENTIFICADOR '(' lista_expressoes ')'

   81 lista_expressoes: lista_expressoes_nao_vazia
   82                 | /* empty */


Terminals, with rules where they appear

$end (0) 0
'!' (33) 67
'(' (40) 15 46 47 48 49 50 51 52 53 54 55 72 80
')' (41) 15 46 47 48 49 50 51 52 53 54 55 72 80
'*' (42) 68
'+' (43) 64
',' (44) 18 43
'-' (45) 65 66
'/' (47) 69
':' (58) 12 13 15 20
';' (59) 10 11 21 26 27 47 49 50 51 53 55
'<' (60) 70
'=' (61) 38 39
'>' (62) 71
'[' (91) 13 40 57
']' (93) 13 40 57
'{' (123) 23 24
'}' (125) 23 24
error (256)
TK_PR_INT (258) 5
TK_PR_FLOAT (259) 6
TK_PR_BOOL (260) 7
TK_PR_CHAR (261) 8
TK_PR_STRING (262) 9
TK_PR_IF (263) 46 47 48 49 50 51
TK_PR_THEN (264) 46 47 48 49 50 51
TK_PR_ELSE (265) 48 49 50 51
TK_PR_WHILE (266) 52 53 54 55
TK_PR_DO (267) 52 53 54 55
TK_PR_INPUT (268) 41
TK_PR_OUTPUT (269) 42
TK_PR_RETURN (270) 45
TK_OC_LE (271) 73
TK_OC_GE (272) 74
TK_OC_EQ (273) 75
TK_OC_NE (274) 76
TK_OC_AND (275) 77
TK_OC_OR (276) 78
TK_LIT_INT (277) 13 58
TK_LIT_FLOAT (278) 59
TK_LIT_FALSE (279) 60
TK_LIT_TRUE (280) 61
TK_LIT_CHAR (281) 62
TK_LIT_STRING (282) 63
TK_IDENTIFICADOR (283) 12 13 15 20 38 40 41 56 57 80
TOKEN_ERRO (284)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
p (48)
    on left: 1, on right: 0
programa (49)
    on left: 2 3 4, on right: 1 2 3
tipo_variavel (50)
    on left: 5 6 7 8 9, on right: 12 13 15 20
dec_global (51)
    on left: 10 11, on right: 2
dec_variavel (52)
    on left: 12, on right: 10 21 30
dec_vetor (53)
    on left: 13, on right: 11 31
dec_funcao (54)
    on left: 14, on right: 3
cabecalho (55)
    on left: 15, on right: 14
lista_param (56)
    on left: 16 17, on right: 15
lista_param_nao_vazia (57)
    on left: 18 19, on right: 16 18
parametro (58)
    on left: 20, on right: 18 19
dec_local (59)
    on left: 21 22, on right: 14 21
corpo (60)
    on left: 23, on right: 14
bloco_comando (61)
    on left: 24, on right: 29 52 54
lista_comando (62)
    on left: 25 26 27 28, on right: 23 24 26 27
comando (63)
    on left: 29 30 31 32 33 34 35 36 37, on right: 25 26 46 48 49 50
atribuicao (64)
    on left: 38 39, on right: 33
vet_index (65)
    on left: 40, on right: 39
input (66)
    on left: 41, on right: 34
output (67)
    on left: 42, on right: 35
lista_expressoes_nao_vazia (68)
    on left: 43 44, on right: 42 43 81
return (69)
    on left: 45, on right: 36
controle_fluxo (70)
    on left: 46 47 48 49 50 51 52 53 54 55, on right: 32
expressao (71)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79, on right: 38 39 40 43 44 45 46 47 48 49 50 51
    52 53 54 55 57 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
chamada (72)
    on left: 80, on right: 37 79
lista_expressoes (73)
    on left: 81 82, on right: 80


state 0

    0 $accept: . p $end

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 4 (programa)

    p              go to state 6
    programa       go to state 7
    tipo_variavel  go to state 8
    dec_global     go to state 9
    dec_variavel   go to state 10
    dec_vetor      go to state 11
    dec_funcao     go to state 12
    cabecalho      go to state 13


state 1

    5 tipo_variavel: TK_PR_INT .

    $default  reduce using rule 5 (tipo_variavel)


state 2

    6 tipo_variavel: TK_PR_FLOAT .

    $default  reduce using rule 6 (tipo_variavel)


state 3

    7 tipo_variavel: TK_PR_BOOL .

    $default  reduce using rule 7 (tipo_variavel)


state 4

    8 tipo_variavel: TK_PR_CHAR .

    $default  reduce using rule 8 (tipo_variavel)


state 5

    9 tipo_variavel: TK_PR_STRING .

    $default  reduce using rule 9 (tipo_variavel)


state 6

    0 $accept: p . $end

    $end  shift, and go to state 14


state 7

    1 p: programa .

    $default  reduce using rule 1 (p)


state 8

   12 dec_variavel: tipo_variavel . ':' TK_IDENTIFICADOR
   13 dec_vetor: tipo_variavel . ':' TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   15 cabecalho: tipo_variavel . ':' TK_IDENTIFICADOR '(' lista_param ')'

    ':'  shift, and go to state 15


state 9

    2 programa: dec_global . programa

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 4 (programa)

    programa       go to state 16
    tipo_variavel  go to state 8
    dec_global     go to state 9
    dec_variavel   go to state 10
    dec_vetor      go to state 11
    dec_funcao     go to state 12
    cabecalho      go to state 13


state 10

   10 dec_global: dec_variavel . ';'

    ';'  shift, and go to state 17


state 11

   11 dec_global: dec_vetor . ';'

    ';'  shift, and go to state 18


state 12

    3 programa: dec_funcao . programa

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 4 (programa)

    programa       go to state 19
    tipo_variavel  go to state 8
    dec_global     go to state 9
    dec_variavel   go to state 10
    dec_vetor      go to state 11
    dec_funcao     go to state 12
    cabecalho      go to state 13


state 13

   14 dec_funcao: cabecalho . dec_local corpo

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 22 (dec_local)

    tipo_variavel  go to state 20
    dec_variavel   go to state 21
    dec_local      go to state 22


state 14

    0 $accept: p $end .

    $default  accept


state 15

   12 dec_variavel: tipo_variavel ':' . TK_IDENTIFICADOR
   13 dec_vetor: tipo_variavel ':' . TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   15 cabecalho: tipo_variavel ':' . TK_IDENTIFICADOR '(' lista_param ')'

    TK_IDENTIFICADOR  shift, and go to state 23


state 16

    2 programa: dec_global programa .

    $default  reduce using rule 2 (programa)


state 17

   10 dec_global: dec_variavel ';' .

    $default  reduce using rule 10 (dec_global)


state 18

   11 dec_global: dec_vetor ';' .

    $default  reduce using rule 11 (dec_global)


state 19

    3 programa: dec_funcao programa .

    $default  reduce using rule 3 (programa)


state 20

   12 dec_variavel: tipo_variavel . ':' TK_IDENTIFICADOR

    ':'  shift, and go to state 24


state 21

   21 dec_local: dec_variavel . ';' dec_local

    ';'  shift, and go to state 25


state 22

   14 dec_funcao: cabecalho dec_local . corpo

    '{'  shift, and go to state 26

    corpo  go to state 27


state 23

   12 dec_variavel: tipo_variavel ':' TK_IDENTIFICADOR .
   13 dec_vetor: tipo_variavel ':' TK_IDENTIFICADOR . '[' TK_LIT_INT ']'
   15 cabecalho: tipo_variavel ':' TK_IDENTIFICADOR . '(' lista_param ')'

    '['  shift, and go to state 28
    '('  shift, and go to state 29

    $default  reduce using rule 12 (dec_variavel)


state 24

   12 dec_variavel: tipo_variavel ':' . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 30


state 25

   21 dec_local: dec_variavel ';' . dec_local

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 22 (dec_local)

    tipo_variavel  go to state 20
    dec_variavel   go to state 21
    dec_local      go to state 31


state 26

   23 corpo: '{' . lista_comando '}'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 32
    TK_PR_WHILE       shift, and go to state 33
    TK_PR_DO          shift, and go to state 34
    TK_PR_INPUT       shift, and go to state 35
    TK_PR_OUTPUT      shift, and go to state 36
    TK_PR_RETURN      shift, and go to state 37
    TK_IDENTIFICADOR  shift, and go to state 38
    ';'               shift, and go to state 39
    '{'               shift, and go to state 40

    $default  reduce using rule 28 (lista_comando)

    tipo_variavel   go to state 41
    dec_variavel    go to state 42
    dec_vetor       go to state 43
    bloco_comando   go to state 44
    lista_comando   go to state 45
    comando         go to state 46
    atribuicao      go to state 47
    vet_index       go to state 48
    input           go to state 49
    output          go to state 50
    return          go to state 51
    controle_fluxo  go to state 52
    chamada         go to state 53


state 27

   14 dec_funcao: cabecalho dec_local corpo .

    $default  reduce using rule 14 (dec_funcao)


state 28

   13 dec_vetor: tipo_variavel ':' TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 54


state 29

   15 cabecalho: tipo_variavel ':' TK_IDENTIFICADOR '(' . lista_param ')'

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 17 (lista_param)

    tipo_variavel          go to state 55
    lista_param            go to state 56
    lista_param_nao_vazia  go to state 57
    parametro              go to state 58


state 30

   12 dec_variavel: tipo_variavel ':' TK_IDENTIFICADOR .

    $default  reduce using rule 12 (dec_variavel)


state 31

   21 dec_local: dec_variavel ';' dec_local .

    $default  reduce using rule 21 (dec_local)


state 32

   46 controle_fluxo: TK_PR_IF . '(' expressao ')' TK_PR_THEN comando
   47               | TK_PR_IF . '(' expressao ')' TK_PR_THEN ';'
   48               | TK_PR_IF . '(' expressao ')' TK_PR_THEN comando TK_PR_ELSE comando
   49               | TK_PR_IF . '(' expressao ')' TK_PR_THEN ';' TK_PR_ELSE comando
   50               | TK_PR_IF . '(' expressao ')' TK_PR_THEN comando TK_PR_ELSE ';'
   51               | TK_PR_IF . '(' expressao ')' TK_PR_THEN ';' TK_PR_ELSE ';'

    '('  shift, and go to state 59


state 33

   52 controle_fluxo: TK_PR_WHILE . '(' expressao ')' TK_PR_DO bloco_comando
   53               | TK_PR_WHILE . '(' expressao ')' TK_PR_DO ';'

    '('  shift, and go to state 60


state 34

   54 controle_fluxo: TK_PR_DO . bloco_comando TK_PR_WHILE '(' expressao ')'
   55               | TK_PR_DO . ';' TK_PR_WHILE '(' expressao ')'

    ';'  shift, and go to state 61
    '{'  shift, and go to state 40

    bloco_comando  go to state 62


state 35

   41 input: TK_PR_INPUT . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 63


state 36

   42 output: TK_PR_OUTPUT . lista_expressoes_nao_vazia

    TK_LIT_INT        shift, and go to state 64
    TK_LIT_FLOAT      shift, and go to state 65
    TK_LIT_FALSE      shift, and go to state 66
    TK_LIT_TRUE       shift, and go to state 67
    TK_LIT_CHAR       shift, and go to state 68
    TK_LIT_STRING     shift, and go to state 69
    TK_IDENTIFICADOR  shift, and go to state 70
    '-'               shift, and go to state 71
    '!'               shift, and go to state 72
    '('               shift, and go to state 73

    lista_expressoes_nao_vazia  go to state 74
    expressao                   go to state 75
    chamada                     go to state 76


state 37

   45 return: TK_PR_RETURN . expressao

    TK_LIT_INT        shift, and go to state 64
    TK_LIT_FLOAT      shift, and go to state 65
    TK_LIT_FALSE      shift, and go to state 66
    TK_LIT_TRUE       shift, and go to state 67
    TK_LIT_CHAR       shift, and go to state 68
    TK_LIT_STRING     shift, and go to state 69
    TK_IDENTIFICADOR  shift, and go to state 70
    '-'               shift, and go to state 71
    '!'               shift, and go to state 72
    '('               shift, and go to state 73

    expressao  go to state 77
    chamada    go to state 76


state 38

   38 atribuicao: TK_IDENTIFICADOR . '=' expressao
   40 vet_index: TK_IDENTIFICADOR . '[' expressao ']'
   80 chamada: TK_IDENTIFICADOR . '(' lista_expressoes ')'

    '['  shift, and go to state 78
    '('  shift, and go to state 79
    '='  shift, and go to state 80


state 39

   27 lista_comando: ';' . lista_comando

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 32
    TK_PR_WHILE       shift, and go to state 33
    TK_PR_DO          shift, and go to state 34
    TK_PR_INPUT       shift, and go to state 35
    TK_PR_OUTPUT      shift, and go to state 36
    TK_PR_RETURN      shift, and go to state 37
    TK_IDENTIFICADOR  shift, and go to state 38
    ';'               shift, and go to state 39
    '{'               shift, and go to state 40

    $default  reduce using rule 28 (lista_comando)

    tipo_variavel   go to state 41
    dec_variavel    go to state 42
    dec_vetor       go to state 43
    bloco_comando   go to state 44
    lista_comando   go to state 81
    comando         go to state 46
    atribuicao      go to state 47
    vet_index       go to state 48
    input           go to state 49
    output          go to state 50
    return          go to state 51
    controle_fluxo  go to state 52
    chamada         go to state 53


state 40

   24 bloco_comando: '{' . lista_comando '}'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 32
    TK_PR_WHILE       shift, and go to state 33
    TK_PR_DO          shift, and go to state 34
    TK_PR_INPUT       shift, and go to state 35
    TK_PR_OUTPUT      shift, and go to state 36
    TK_PR_RETURN      shift, and go to state 37
    TK_IDENTIFICADOR  shift, and go to state 38
    ';'               shift, and go to state 39
    '{'               shift, and go to state 40
